--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-DB_NAME=my_diary
-DB_PASSWORD=password
-DB_USER=postgres
-DB_SSLMODE=disable
+DB_NAME=
+DB_PASSWORD=
+DB_USER=
+DB_SSLMODE=
+PORT=
+SECRET_KEY=
