--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 DB_NAME=
 DB_PASSWORD=
-DB_USER=
+DB_USER=postgres
 DB_SSLMODE=
-PORT=
-SECRET_KEY=
-API_VERSION=
+PORT=:3000
+SECRET_KEY=mydiarytoken
+ADMIN_KEY=adminmydiary
+API_VERSION=/api/1/
