--- a/env/env.go.example
+++ b/env/env.go.example
@@ -1,15 +1,18 @@
-package environment
+package env
 
 func Environment() *ENVConfig {
 	env := ENVConfig{
 		DBName:     "",
 		DBPassword: "",
-		DBUser:     "",
-		DBSSLMode:  "",
-		Port:       "",
-		SecretKey:  "",
-		AdminKey:   "",
-		APIVersion: "",
+		DBUser:     "postgres",
+		DBSSLMode:  "disable",
+		DBPort:     "",
+		DBHost:     "localhost",
+		Port:       ":3000",
+		SecretKey:  "memberdiarytoken",
+		AdminKey:   "admindiarytoken",
+		APIVersion: "api/v1",
+		ENV:        "",
 	}
 	return &env
 }
